correcting text backwards thru 1938-04-18

--- a/markdown/1951-07-01.md
+++ b/markdown/1951-07-01.md
@@ -1,12 +1,12 @@
-﻿# The Cooper Union for the Advancement of Science and Art By-laws and Regulations Effective July 1, 1951
+﻿# The Cooper Union For The Advancement Of Science And Art By-laws And Regulations Effective July 1, 1951 
 
-## By-Laws And Regulations
+## By-laws And Regulations
 
-Be it ordained by the Board of Trustees of the Cooper Union fob the Advancement of Science and Art, and it is hereby ordained by authority of the same: That the following rules and regulations be, and they hereby are, established as laws and ordinances of said Corporation:
+Be it ordained by the Board of Trustees of the Cooper Union for the Advancement of Science and Art, and it is hereby ordained by authority of the same: That the following rules and regulations be, and they hereby are, established as laws and ordinances of said Corporation:
 
 ### Chapter I: Of The Seal Of The Corporation
 
-1. The device of the seal of this Corporation shall be a circular disc, upon the outer edge of which shall be the words, “The Cooper Union for the Advancement of Science and Art, Founded A. D. 1859, by Peter Cooper, a Mechanic of New York.” These words shall surround a medallion head of Peter Cooper, on the rim of which shall be the words, “whatsoever things are true.”
+1. The device of the seal of this Corporation shall be a circular disc, upon the outer edge of which shall be the words, “THE COOPER UNION FOR THE ADVANCEMENT OF SCIENCE AND ART, FOUNDED A. D. 1859, BY PETER COOPER, A MECHANIC OF NEW YORK.” These words shall surround a medallion head of Peter Cooper, on the rim of which shall be the words, “WHATSOEVER THINGS ARE TRUE.”
 
 ### Chapter II: Of Filling Vacancies In The Board Of Trustees
 
@@ -30,7 +30,8 @@ Be it ordained by the Board of Trustees of the Cooper Union fob the Advancement 
 
 5. At the regular meeting of the Board in May of each year, there shall be chosen by the Trustees, by ballot, one Chairman of the Trustees who shall be a Trustee, one Treasurer, one Secretary, to hold their respective offices for one year, and until others are chosen in their stead. The Treasurer and Secretary need not be Trustees.
 
-6. But any vacancies thereafter occurring in either of the said offices, shall as soon as possible be ascertained and recorded on the minutes of any regular meeting of the Board, and shall be filled in like manner as provided in the preceding section at the regular meeting of the Board next thereafter, if possible, or as soon as may be.  
+6. But any vacancies thereafter occurring in either of the said offices, shall as soon as possible be ascertained and recorded on the minutes of any regular meeting of the Board, and shall be filled in like manner as provided in the preceding section at the regular meeting of the Board next thereafter, if possible, or as soon as may be.
+
 The above offices may be filled _pro tem_., for and at any meeting of the Board.
 
 7. All officers and employees of the Corporation shall hold office during the pleasure of the Board of Trustees, and may be removed either by vote, or if any officer appointed or elected by the Board shall become unfit to execute his office, or shall misdemean himself in his office contrary to any of the by-laws or regulations of the Board to which he is amenable, or refuse or neglect to execute the same, any Trustee or officer of the Corporation may exhibit against him a complaint in writing to the Board at any legal meeting; and thereupon a notice of the said complaint shall be given in writing to the person complained of, and the Board having examined into the truth of the complaint, and heard the defense of the party accused, if any shall be made, may suspend or discharge the officer complained of as aforesaid; excepting always from the operation of this section the removals otherwise provided for in the charter.
@@ -67,7 +68,7 @@ The above offices may be filled _pro tem_., for and at any meeting of the Board.
 
 1. The Treasurer shall have custody of the real estate bonds, mortgages, title deeds, and other papers and documents relating to the property and accounts of the Corporation.
 
-2. An Assistant Treasurer shall be appointed by the Trustees, which Assistant Treasurer shall be a Trust Company, having its principal office or place of business in The City of New York, and which Assistant Treasurer shall have custody of all corporate bonds and corporate securities owned by the Corporation, and shall collect all interest due on such corporate bonds and transmit all sums so collected to the Treasurer at his office in the Cooper Union.
+2. An Assistant Treasurer shall be appointed by the Trustees, which Assistant Treasurer shall be a Trust Company, having its principal office or place of business in the City of New York, and which Assistant Treasurer shall have custody of all corporate bonds and corporate securities owned by the Corporation, and shall collect all interest due on such corporate bonds and transmit all sums so collected to the Treasurer at his office in the Cooper Union.
 
 3. A Second Assistant Treasurer may be appointed by the Trustees to perform such duties as may from time to time be assigned to him by the Trustees.
 
@@ -169,6 +170,6 @@ The above offices may be filled _pro tem_., for and at any meeting of the Board.
 
 Whenever, in the opinion of the Board of Trustees, it is suitable to do so, they shall act upon the subject of organizing a society with the style and title of “The Associates of the Cooper Union for the Advancement of Science and Art,” as provided in section five of the charter.
 
-### Chapter XIV: If Alterations In The By-laws
+### Chapter XIV: Of Alterations In The By-laws
 
 The Board of Trustees may, by an affirmative vote of not less than three Trustees, alter, amend, add to or repeal these By-Laws, or any of them, at any regular meeting provided notice of the proposed alterations be given and entered on their minutes at least one previous regular meeting before, but no such notice shall be required for the suspension of a By-Law.
