--- a/markdown/1992-09-16.md
+++ b/markdown/1992-09-16.md
@@ -1,4 +1,4 @@
-# The Cooper Union for the Advancement of Science and Art Bylaws as adopted May 12, 1972 as amended through September 16, 1992 and as amended April 10, 1996
+# The Cooper Union for the Advancement of Science and Art Bylaws as adopted May 12,1972 and as amended through September 16,1992
 
 ## Article I: Board of Trustees
 
@@ -16,7 +16,7 @@ Both male and female persons shall be eligible to serve as trustees. No person w
 
 ### Section 1.04. Election Of Trustees
 
-Trustees in office on the date of adoption of these Bylaws shall serve until the next annual meeting of the Board of Trustees and until their successors are elected and qualified. At such meeting the Board shall be divided into four classes, the first, second and third classes each to consist of, to the extent possible, one-fourth of the whole number of trustees theretofore fixed by the Board, and the fourth class to consist of the persons who shall have been trustees for life immediately prior to January 26, 1972. The trustees comprising the first class shall serve for a term of three years, those comprising the second class for a term of four years, those comprising the third class for a term of five years, and those comprising the fourth class for a term of six years. In every case, each trustee shall continue to serve until a successor is elected and has qualified. At each annual meeting of the Board, beginning in 1975, or in default of election at such meeting, then at any adjournment thereof, the successors of those trustees whose terms then expire or have expired shall be elected by the Board to serve for a full four-year term and until their successors are elected and have qualified. At the annual meeting of the Board held in 1974, there shall be created a class of the Board to consist of not more than four trustees, to be known as Alumni trustees. At each annual meeting of the Board, or in default of election at such meeting, then at any adjournment thereof, there may be elected by the Board an Alumni trustee to serve for a four-year term and until his successor is elected and has qualified. Notice of any pending election to the Board shall be entered in the minutes of at least one preceding regular meeting of the Board. At the designated meeting, or at any regularly adjourned meeting from that meeting, such election shall be held by ballot. The nominee first receiving a number of affirmative votes equal to at least a majority of the trustees then in office shall be elected to fill the first vacancy. The voting shall continue in this manner until all such vacancies are filled. If any person so elected declines to act as a trustee, the vacancy filled by his election shall be deemed to be again created. Any vacancy in the Board resulting from any cause whatsoever (including, but not limited to, an increase in the number of authorized trustees or the resignation of a trustee) may be filled for the duration of the unexpired term by the Board of Trustees at any meeting thereof, provided that the notice of such pending election, as entered in the minutes of at least one preceding regular meeting of such Board, states the meeting at which such election shall be held. [as amended June 10, 1987]
+Trustees in office on the date of adoption of these Bylaws shall serve until the next annual meeting of the Board of Trustees and until their successors are elected and qualified. At such meeting the Board shall be divided into four classes, the first, second and third classes each to consist of, to the extent possible, one-fourth of the whole number of trustees theretofore fixed by the Board, and the fourth class to consist of the persons who shall have been trustees for life immediately prior to January 26, 1972. The trustees comprising the first class shall serve for a term of three years, those comprising the second class for a term of four years, those comprising the third class for a term of five years, and those comprising the fourth class for a term of six years. In every case, each trustee shall continue to serve until a successor is elected and has qualified. At each annual meeting of the Board, beginning in 1975, or in default of election at such meeting, then at any adjournment thereof, the successors of those trustees whose terms then expire or have expired shall be elected by the Board to serve for a full four-year term and until their successors are elected and have qualified. At the annual meeting of the Board held in 1974, there shall be created a class of the Board to consist of not more than three trustees, to be known as Alumni trustees. At each annual meeting of the Board, or in default of election at such meeting, then at any adjournment thereof, there may be elected by the Board an Alumni trustee to serve for a four-year term and until his successor is elected and has qualified. Notice of any pending election to the Board shall be entered in the minutes of at least one preceding regular meeting of the Board. At the designated meeting, or at any regularly adjourned meeting from that meeting, such election shall be held by ballot. The nominee first receiving a number of affirmative votes equal to at least a majority of the trustees then in office shall be elected to fill the first vacancy. The voting shall continue in this manner until all such vacancies are filled. If any person so elected declines to act as a trustee, the vacancy filled by his election shall be deemed to be again created. Any vacancy in the Board resulting from any cause whatsoever (including, but not limited to, an increase in the number of authorized trustees or the resignation of a trustee) may be filled for the duration of the unexpired term by the Board of Trustees at any meeting thereof, provided that the notice of such pending election, as entered in the minutes of at least one preceding regular meeting of such Board, states the meeting at which such election shall be held. [as amended June 10, 1987]
 
 ### Section 1.05. Annual And Regular Meetings
 
@@ -147,37 +147,3 @@ No contract, other than in the ordinary course, may be entered into on behalf of
 ### Section 4.05. Transfer Of Securities
 
 Any two of the following persons, viz.: President, Vice President of Business Affairs, Treasurer, or any two persons designated by the Board of Trustees shall have authority to execute under seal such form of transfer and assignment as may be customary or necessary to constitute a sale or transfer of stocks, bonds or other securities standing in the name of or belonging to the Corporation. A corporation or person transferring any such stocks, bonds or other securities pursuant to a form of transfer or assignment so executed shall be fully protected, and shall be under no duty to inquire whether or not the Board has taken specific action in respect thereof.
-
-## Article V: Office Of The Corporation
-
-The office of the Corporation shall be at Cooper Square in the Borough of Manhattan, the City and State of New York.
-
-## Article VI: Corporate Seal
-
-The seal of the Corporation shall be a circular disk which shall have the words "The Cooper Union for the Advancement of Science and Art, Founded A.D. 1859, by Peter Cooper, a Mechanic of New York," inscribed around the outer edge. The center of the disk shall contain a medallion head of Peter Cooper over which shall be written "Whatsoever Things are True."
-
-## Article VII: Fiscal Provisions
-
-### Section 7.01. Fiscal Year
-
-The fiscal year of the Corporation shall be the period July 1 to June 30 inclusive.
-
-### Section 7.02. Bonding
-
-All officers and other persons who may be authorized by the Board of Trustees or its Executive Committee to receive or disburse funds of the Corporation may be required to furnish bond for the faithful discharge of their duty, in such sums and with such surety and on such cond_itions as the Board of Trustees or its Executive Committee may from time to time determine. The expense of such bonds shall be borne by the Corporation.
-
-### Section 7.03. Audit
-
-After the close of each fiscal year, the financial transactions and books of the Corporation for the preceding fiscal year shall be audited by independent certified public accountants selected by the Board of Trustees, and a report of the audit shall be made to the Board.
-
-## Article VIII: Waiver Of Notice
-
-Whenever any notice whatever is required to be given under the provisions of the laws of the State of New York or under the provisions of the Charter of the Corporation or these Bylaws, a waiver thereof, whether before or af Ter the time stated therein, shall be deemed the equivalent thereto.
-
-## Article IX: Amendments
-
-The Bylaws of the Corporation may be adopted, amended, suspended or repealed at any regular meeting (including the annual meeting) of the Board of Trustees by a majority vote of all the trustees then in office provided that notice of the proposed adoption, amendment or repeal shall have been given in the notice of such meeting. No such notice shall be required for the suspension of a Bylaw.
-
-## Article X: Members
-
-The Corporation shall have no members.
