correcting text reverse-chronologically, done thru 1911

--- a/markdown/1925-02-10.md
+++ b/markdown/1925-02-10.md
@@ -1,12 +1,12 @@
-﻿# The Cooper Union for The Advancement Of Science and Art By-Laws and Regulations Revised February 10, 1925
+# The Cooper Union For The Advancement Of Science And Art By-laws And Regulations Revised February 10, 1925
 
-## By-Laws and Regulations
+## By-laws And Regulations
 
 Be it ordained by the Board of Trustees of the Cooper Union for the Advancement of Science and Art, and it is hereby ordained by authority of the same: That the following rules and regulations be, and they hereby are, established as laws and ordinances of said Corporation:
 
 ### Chapter I: Of The Seal Of The Corporation
 
-1. The device of the seal of this Corporation shall be a circular disc, upon the outer edge of which shall be the words, "The Cooper Union for the Advancement of Science and Art, Founded A.D. 1859, by Peter Cooper, a Mechanic of New York."" These words shall surround a medallion head of Peter Cooper, on the rim of which shall be the words, "whatsoever things are true."
+1. The device of the seal of this Corporation shall be a circular disc, upon the outer edge of which shall be the words, "THE COOPER UNION FOR THE ADVANCEMENT OF SCIENCE AND ART, FOUNDED A.D. 1859, BY PETER COOPER, A MECHANIC OF NEW YORK." These words shall surround a medallion head of Peter Cooper, on the rim of which shall be the words, "WHATSOEVER THINGS ARE TRUE."
 
 ### Chapter II: Of Filling Vacancies In The Board Of Trustees
 
@@ -14,7 +14,7 @@ Be it ordained by the Board of Trustees of the Cooper Union for the Advancement 
 
 2. The Secretary of the Board of Trustees shall act as inspector of votes at such election.
 
-3. The poll for said election shall be opened at the hour determined lor the meeting, and closed within one hour thereafter, and every Trustee voting shall deliver to the inspector a ballot containing the name of the person as Trustee to fill said vacancy, and the inspector shall receive and open such ballots, and write down the names of the persons so voting as aforesaid, and their respective candidates, in the order in which they vote, in a roll list which shall form part of the minutes of the meeting. And at the time the said election shall be closed, the inspector shall openly declare the poll and the name of the person who shall be found to have been elected Trustee according to the charter and by-laws, and shall enter the same on the minutes of the meeting, and shall as soon as may be send to the person so elected a written notification of the same.
+3. The poll for said election shall be opened at the hour determined for the meeting, and closed within one hour thereafter, and every Trustee voting shall deliver to the inspector a ballot containing the name of the person as Trustee to fill said vacancy, and the inspector shall receive and open such ballots, and write down the names of the persons so voting as aforesaid, and their respective candidates, in the order in which they vote, in a roll list which shall form part of the minutes of the meeting. And at the time the said election shall be closed, the inspector shall openly declare the poll and the name of the person who shall be found to have been elected Trustee according to the charter and by-laws, and shall enter the same on the minutes of the meeting, and shall as soon as may be send to the person so elected a written notification of the same.
 
 ### Chapter III: Of The Board Of Trustees, Their Meetings, Elections, Committees And Appointments And Removals
 
@@ -28,8 +28,7 @@ Be it ordained by the Board of Trustees of the Cooper Union for the Advancement 
 
 5. At the regular meeting of the Board in May of each year, there shall be chosen by the Trustees, by ballot, one President who shall be a Trustee, one Treasurer, one Secretary, to hold their respective offices for one year, and until others are chosen in their stead. The Treasurer and Secretary need not be Trustees.
 
-6. But any vacancies thereafter occurring in either of the said offices, shall as soon as possible be ascertained and recorded on the minutes of any regular meeting of the Board, and shall be filled in like manner as provided in the preceding section at the regular meeting of the Board next thereafter, if possible, or as soon as may be.  
-The above offices may be filled _pro tem_., for and at any meeting of the Board.
+6. But any vacancies thereafter occurring in either of the said offices, shall as soon as possible be ascertained and recorded on the minutes of any regular meeting of the Board, and shall be filled in like manner as provided in the preceding section at the regular meeting of the Board next thereafter, if possible, or as soon as may be. The above offices may be filled _pro tem_., for and at any meeting of the Board.
 
 7. All officers and employees of the Corporation shall hold office during the pleasure of the Board of Trustees, and may be removed either by vote, or if any officer appointed or elected by the Board shall become unfit to execute his office, or shall misdemean himself in his office contrary to any of the by-laws or regulations of the Board to which he is amenable, or refuse or neglect to execute the same, any Trustee or officer of the Corporation may exhibit against him a complaint in writing to the Board at any legal meeting; and thereupon a notice of the said complaint shall be given in writing to the person complained of, and the Board having examined into the truth of the complaint, and heard the defense of the party accused, if any shall be made, may suspend or discharge the officer complained of as aforesaid; excepting always from the operation of this section the removals otherwise provided for in the charter.
 
@@ -121,7 +120,6 @@ insert in the margin opposite to them respectively their amounts and dates, and 
 1. The Trustees shall select an Advisory Council of ladies, or of ladies and gentlemen, to visit the Women’s Art School as hereinafter provided.
 
 2. It shall be the duty of the Advisory Council of the Women’s Art School to recommend measures of improvement to the Trustees; to visit the school for that purpose; and to keep a book of minutes in which to record suggestions, which book of minutes shall be laid before the Trustees and read at each regular meeting. They shall make an annual report to the Trustees of the condition and work of the said school.
-11
 
 3. The Advisory Councils may from time to time delegate any of its duties, as above defined, to any one or more of its members.
 
