--- a/markdown/1938-04-18.md
+++ b/markdown/1938-04-18.md
@@ -6,11 +6,11 @@ Be it ordained by the Board of Trustees of the Cooper Union for the Advancement 
 
 ### Chapter I: Of The Seal Of The Corporation
 
-1. The device of the seal of this Corporation shall be a circular disc, upon the outer edge of which shall be the words, “THE COOPER UNION FOR THE ADVANCEMENT OF SCIENCE AND ART, FOUNDED A. D. 1859, BY PETER COOPER, A MECHANIC OF NEW YORK.” These words shall surround a medallion head of Peter Cooper, on the rim of which shall be the words, “WHATSOEVER THINGS ARE TRUE.”
+1. The device of the seal of this Corporation shall be a circular disc, upon the outer edge of which shall be the words, "THE COOPER UNION FOR THE ADVANCEMENT OF SCIENCE AND ART, FOUNDED A.D. 1859, BY PETER COOPER, A MECHANIC OF NEW YORK." These words shall surround a medallion head of Peter Cooper, on the rim of which shall be the words, "WHATSOEVER THINGS ARE TRUE."
 
 ### Chapter II: Of Filling Vacancies In The Board Of Trustees
 
-1.  Upon the happening of any vacancy in the Board of Trustees of this Corporation, which is provided by the charter to be filled by election, the same shall be recorded, with its cause, on the book of minutes of the meetings of the Board, and an election shall be held within one year after such vacancy occurs, by the surviving or remaining members of the Board, at a regular meeting, on previous notice voted and determined by them, given and entered in the minutes of at least one preceding regular meeting of such Board, stating the meeting at which such election shall be held; and at such meeting, or at any regularly adjourned meeting from that meeting, such election shall be held by ballot, and the person first having three of the votes cast shall be the Trustee to fill such vacancy.
+1. Upon the happening of any vacancy in the Board of Trustees of this Corporation, which is provided by the charter to be filled by election, the same shall be recorded, with its cause, on the book of minutes of the meetings of the Board, and an election shall be held within one year after such vacancy occurs, by the surviving or remaining members of the Board, at a regular meeting, on previous notice voted and determined by them, given and entered in the minutes of at least one preceding regular meeting of such Board, stating the meeting at which such election shall be held; and at such meeting, or at any regularly adjourned meeting from that meeting, such election shall be held by ballot, and the person first having three of the votes cast shall be the Trustee to fill such vacancy.
 
 2. The Secretary of the Board of Trustees shall act as inspector of votes at such election.
 
@@ -56,7 +56,7 @@ The above offices may be filled _pro tem_., for and at any meeting of the Board.
 
 2. The President shall preside at all meetings of the Trustees, and shall preserve order therein; he shall nominate all committees, except such as shall be chosen by ballot.
 
-3. The President shall be ex-officio a member of all committees.
+3. The President shall be _ex-officio_ a member of all committees.
 
 4. The President shall sign for the Trustees, on the direction of their Board, all their bonds, deeds, written leases and other written instruments, the amount involved in which shall be over one hundred dollars in value, or which shall have one year or more from their date to run.
 
@@ -146,7 +146,7 @@ The above offices may be filled _pro tem_., for and at any meeting of the Board.
 
 7. In the absence or disability of the Director, pending action by the Trustees, the Secretary shall perform the duties and exercise the authority of the Director.
 
-8. The Director shall have his office in the Cooper Union Building. It shall be his duty to attend the meetings of the Trustees and he shall be ex-officio a member of all faculties and faculty committees.
+8. The Director shall have his office in the Cooper Union Building. It shall be his duty to attend the meetings of the Trustees and he shall be _ex-officio_ a member of all faculties and faculty committees.
 
 ### Chapter XII: Of Other Officers And Employees
 
@@ -158,7 +158,7 @@ The above offices may be filled _pro tem_., for and at any meeting of the Board.
 
 ### Chapter XIII: Of The Associates Of The Cooper Union For The Advancement Of Science And Art
 
-Whenever, in the opinion of the Board of Trustees, it is suitable to do so, they shall act upon the subject of organizing a society with the style and title of “The Associates of the Cooper Union for the Advancement of Science and Art,” as provided in section five of the charter.
+Whenever, in the opinion of the Board of Trustees, it is suitable to do so, they shall act upon the subject of organizing a society with the style and title of "The Associates of the Cooper Union for the Advancement of Science and Art," as provided in section five of the charter.
 
 ### Chapter XIV: Of Alterations In The By-laws
 
